force-app/main/default/objects/ccrz__E_PrivateCacheContent__c/ccrz__E_PrivateCacheContent__c.object-meta.xml
<CustomObject>
    <description>Child table storing the cache entries for a private cache.</description>
    <label>CC Private Cache Content</label>
    <nameField>
        <label>CC Private Cache Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Private Cache Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>