force-app/main/default/objects/ccrz__E_PrivateCacheContent__c/fields/ccrz__CacheContentId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CacheContentId__c</fullName>
    <description>External id used for data loads</description>
    <externalId>true</externalId>
    <label>Cache Content Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>