force-app/main/default/objects/ccrz__E_PrivateCacheContent__c/fields/ccrz__Content__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Content__c</fullName>
    <description>Container contents</description>
    <label>Content</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>