force-app/main/default/objects/ccrz__E_PrivateCacheContent__c/fields/ccrz__ParentCache__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ParentCache__c</fullName>
    <label>Parent Cache</label>
    <referenceTo>ccrz__E_PrivateCache__c</referenceTo>
    <relationshipLabel>Cache Contents</relationshipLabel>
    <relationshipName>CacheContents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>